...
                  BoxShadow(
                      color: Colors.black26, blurRadius: 6, offset: Offset(0, 2))
                ]),
            height: 50,
            child: TextFormField(
              keyboardType: TextInputType.emailAddress,
              key:Key("emailReg"),
              onSaved: (input) => signupRequestModel.email = input,
              style: TextStyle(color: Colors.black),
              decoration: InputDecoration(
                  border: InputBorder.none,
                  contentPadding: EdgeInsets.only(top: 14),
                  prefixIcon: Icon(Icons.email, color: Colors.black26),
...
                  BoxShadow(
                      color: Colors.black26, blurRadius: 6, offset: Offset(0, 2))
                ]),
            height: 50,
            child: TextFormField(
              keyboardType: TextInputType.visiblePassword,
              key:Key("pwd1Reg"),
              obscureText: hidePassword1,
              onSaved: (input) => signupRequestModel.password1 = input,
              style: TextStyle(color: Colors.black),
              decoration: InputDecoration(
                border: InputBorder.none,
                contentPadding: EdgeInsets.only(top: 14),
...
                  BoxShadow(
                      color: Colors.black26, blurRadius: 6, offset: Offset(0, 2))
                ]),
            height: 50,
            child: TextFormField(
              keyboardType: TextInputType.visiblePassword,
              key:Key("pwd2Reg"),
              obscureText: hidePassword2,
              onSaved: (input) => signupRequestModel.password2 = input,
              style: TextStyle(color: Colors.black),
              decoration: InputDecoration(
                border: InputBorder.none,
                contentPadding: EdgeInsets.only(top: 14),
...
  }

  Widget buildSignUpBtn() {
    return Container(
      padding: EdgeInsets.symmetric(horizontal: 25,vertical: 25),
      width: double.infinity,
      key:Key("signupReg"),
      child: ElevatedButton(
        onPressed: () {
          if (validateAndSave()) {
            setState(() {
              isApiCallProcess = true;
            });
...



SnackBar buildErrorSnackBtn(String str){
  return SnackBar(
    content: Text(str,
        key:Key("errorReg"),
        style: const TextStyle(
            fontSize:17,
            fontWeight: FontWeight.bold)
    ),
    backgroundColor: Colors.red,
  );
...
