...
      padding: EdgeInsets.symmetric(vertical: 5),
      width: double.infinity,
      child: ElevatedButton(
        style: raisedButtonStyle,
        onPressed: _launchURLApp,//Navigator.push(context,new MaterialPageRoute(builder: (context)=>new FormScreen())),
        child: Text(
          'Color-blindness test',
          style: TextStyle(
              color: Color.fromRGBO(143, 148, 255, 1),
              fontWeight: FontWeight.bold,
              fontSize: 18
          ),
        ),
...
